--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="af_logo.ico" />
+    <meta http-equiv="Content-Security-Policy" content="directive 'source';">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
             name="description"
-            content="A personal profile."
+            content="AtreyHazelHispanic."
     />
     <link rel="apple-touch-icon" href="af_logo.ico" />
     <!--
